fixed z-indexes, animated navItem underline

--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,6 @@
   font-family: 'PT Sans', sans-serif;
 }
 
-.Navbar{
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
 
 .Body{
   position: relative;
